--- a/app/styles.css
+++ b/app/styles.css
@@ -1,15 +1,15 @@
 header {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-gap: 10px;
-    align-items: end;
-    border-bottom: .3rem solid darkgrey;
+    grid-gap: 20px;
+    align-items: top;
+    border-bottom: 5rem solid yellow;
 }
 
 h1 {
     grid-column: 1/span 2;
     margin-left: 1rem;
-    color: orange;
+    color: red;
 }
 
 nav {
